intel/bench_214/extr_.tenginesrccorengx_parse.c_ngx_parse_time_with_main/log.txt
bench_214/extr_.tenginesrccorengx_parse.c_ngx_parse_time_with_main/extr_.tenginesrccorengx_parse.c_ngx_parse_time_with_main.c:6:13: error: redeclaration of C++ built-in type 'bool'
typedef int bool;
            ^
bench_214/extr_.tenginesrccorengx_parse.c_ngx_parse_time_with_main/extr_.tenginesrccorengx_parse.c_ngx_parse_time_with_main.c:74:34: warning: implicit conversion from 'int' to 'ngx_int_t' (aka 'char') changes value from 31536000 to -128 [-Wconstant-conversion]
            scale = 60 * 60 * 24 * 365;
                  ~ ~~~~~~~~~~~~~^~~~~
bench_214/extr_.tenginesrccorengx_parse.c_ngx_parse_time_with_main/extr_.tenginesrccorengx_parse.c_ngx_parse_time_with_main.c:83:34: warning: implicit conversion from 'int' to 'ngx_int_t' (aka 'char') changes value from 2592000 to 0 [-Wconstant-conversion]
            scale = 60 * 60 * 24 * 30;
                  ~ ~~~~~~~~~~~~~^~~~
bench_214/extr_.tenginesrccorengx_parse.c_ngx_parse_time_with_main/extr_.tenginesrccorengx_parse.c_ngx_parse_time_with_main.c:92:34: warning: implicit conversion from 'int' to 'ngx_int_t' (aka 'char') changes value from 604800 to -128 [-Wconstant-conversion]
            scale = 60 * 60 * 24 * 7;
                  ~ ~~~~~~~~~~~~~^~~
bench_214/extr_.tenginesrccorengx_parse.c_ngx_parse_time_with_main/extr_.tenginesrccorengx_parse.c_ngx_parse_time_with_main.c:101:29: warning: implicit conversion from 'int' to 'ngx_int_t' (aka 'char') changes value from 86400 to -128 [-Wconstant-conversion]
            scale = 60 * 60 * 24;
                  ~ ~~~~~~~~^~~~
bench_214/extr_.tenginesrccorengx_parse.c_ngx_parse_time_with_main/extr_.tenginesrccorengx_parse.c_ngx_parse_time_with_main.c:110:24: warning: implicit conversion from 'int' to 'ngx_int_t' (aka 'char') changes value from 3600 to 16 [-Wconstant-conversion]
            scale = 60 * 60;
                  ~ ~~~^~~~
5 warnings and 1 error generated.
HLS FPGA Parse FAILED.
